Fix degree mark bug
The temp looked misaligned since the degree mark was used for spacing.

By using the after psudoelement and absolute positioning, the problem is
fixed.

--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -250,6 +250,12 @@ color:white;
   justify-self: center;
   font-size: min(7rem, 10vw);
 }
+
+#weatherPageTemp::after{
+  position: absolute;
+  content: "°";
+}
+
 #weatherPageConditions{
   grid-area: currentConditions;
   align-self: center;
@@ -262,11 +268,22 @@ color:white;
   justify-self: center;
   font-size: min(3rem, 4vw);
 }
+
+#weatherPageHighTemp::after{
+  position: absolute;
+  content: "°";
+}
+
 #weatherPageLowTemp{
   grid-area: dailyLow;
   align-self: center;
   justify-self: center;
   font-size: min(3rem, 4vw);
+}
+
+#weatherPageLowTemp::after{
+  position: absolute;
+  content: "°";
 }
 
 #sunriseTime{
